app/assets/stylesheets/components/button/_button.scss
@import "govuk-frontend/govuk/components/button/button";

$govuk-button-colour: govuk-colour("secondary");
$govuk-button-hover-colour: darken($govuk-button-colour, 5%);
$govuk-button-shadow-colour: darken($govuk-button-colour, 15%);
$govuk-button-text-colour: govuk-colour("black");

$button-shadow-size: $govuk-border-width-form-element;

.govuk-button {
  color: $govuk-button-text-colour;
  background-color: $govuk-button-colour;

  // Ensure that any global link styles are overridden
  &:link,
  &:visited,
  &:active,
  &:hover {
    color: $govuk-button-text-colour;
  }

  &:focus {
    color: govuk-colour("black");
    background-color: govuk-colour("yellow") !important;
    outline: none;
  }

  &:hover {
    background-color: $govuk-button-hover-colour;
  }
}

.govuk-back-link {
  background-color: transparent;
  border: none;
}

